--- a/gis_project/src/App.css
+++ b/gis_project/src/App.css
@@ -13,3 +13,9 @@
   position: relative;
   outline: none;
 }
+
+@keyframes blink {
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
+}
